# VulkanForAll

./: README.md
ShaderHeadersAndroid/: 15-draw_cube.frag.h  15-draw_cube.vert.h
ShaderHeadersIOS/: 15-draw_cube.frag.h  15-draw_cube.vert.h
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/csr/hellotriangle/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
cpp/shared/: CMakeLists.txt
cpp/shared/007-draw_test/: main.cpp
cpp/shared/15-draw_cube/: 15-draw_cube.cpp
cpp/shared/utils/: CMakeLists.txt  util.hpp
xcode/HelloTriangle/HelloTriangle/: AppDelegate.swift  ContentView.swift  File.swift  FullScreenChart.swift  HelloTriangle-Bridging-Header.h  HelloTriangleApp.swift  Info.plist  Prefix.pch  Samples.h  test.h  test.mm  wrapperplain.cpp
xcode/HelloTriangle/HelloTriangle.xcodeproj/: project.pbxproj
xcode/HelloTriangle/HelloTriangle.xcodeproj/project.xcworkspace/xcuserdata/cdgomez.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/HelloTriangle/HelloTriangle.xcodeproj/xcshareddata/xcschemes/: HelloTriangle.xcscheme
xcode/HelloTriangle/HelloTriangle.xcodeproj/xcuserdata/cdgomez.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/HelloTriangle/HelloTriangle.xcodeproj/xcuserdata/cdgomez.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/HelloTriangle/HelloTriangle/SampleFiles/: DemoViewController.mm
xcode/HelloTriangle/HelloTriangleTests/: HelloTriangleTests.swift
xcode/HelloTriangle/HelloTriangleUITests/: HelloTriangleUITests.swift
xcode/HelloTriangle/Resources/: Main.storyboard
xcode/HelloTriangle/mymath/mymath/: mymath.cpp  mymath.hpp  mymathPriv.hpp
xcode/HelloTriangle/mymath/mymath.xcodeproj/: project.pbxproj
xcode/HelloTriangle/mymathplain/mymathplain/: mymathplain.h  mymathplain1.cpp  mymathplain2.cpp
xcode/HelloTriangle/mymathplain/mymathplain.xcodeproj/: project.pbxproj
xcode/VulkanForAll.xcworkspace/: contents.xcworkspacedata
xcode/VulkanForAll.xcworkspace/xcuserdata/cdgomez.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/iosMoltenVK/iosMoltenVK/: ContentView.swift  iosMoltenVKApp.swift
xcode/iosMoltenVK/iosMoltenVK.xcodeproj/: project.pbxproj
xcode/iosMoltenVK/iosMoltenVK.xcodeproj/project.xcworkspace/xcuserdata/cdgomez.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/iosMoltenVK/iosMoltenVK.xcodeproj/xcshareddata/xcschemes/: iosMoltenVK.xcscheme
xcode/iosMoltenVK/iosMoltenVK.xcodeproj/xcuserdata/cdgomez.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/iosMoltenVK/iosMoltenVKTests/: iosMoltenVKTests.swift
xcode/iosMoltenVK/iosMoltenVKUITests/: iosMoltenVKUITests.swift
xcode/macosMoltenVK/macosMoltenVK/: main.cpp
xcode/macosMoltenVK/macosMoltenVK.xcodeproj/: project.pbxproj
xcode/macosMoltenVK/macosMoltenVK.xcodeproj/project.xcworkspace/xcuserdata/cdgomez.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/macosMoltenVK/macosMoltenVK.xcodeproj/xcshareddata/xcschemes/: macosMoltenVK.xcscheme
xcode/macosMoltenVK/macosMoltenVK.xcodeproj/xcuserdata/cdgomez.xcuserdatad/xcschemes/: xcschememanagement.plist
(+4 files in other folders)
